--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,20 @@
+project/project/*
+project/target/*
+target/*
+
 *.class
 *.log
+
+.cache/
+.history/
+.lib/
+dist/*
+target/
+lib_managed/
+src_managed/
+project/boot/
+project/plugins/project/
+
+.scala_dependencies
+.worksheet
+.idea
